# practica-calificada-4-guille2400

./: CMakeLists.txt  decode_Encode.h  filter_Blue.h  green_Filter.h  lodepng.cpp  main.cpp  red_Filter.h  rotar_Imagen.h
